I added Hive details page

--- a/views/index.html
+++ b/views/index.html
@@ -60,11 +60,13 @@
             </a>
         </div>
         <div class="dashboard-item">
+            <a href="/hive-details" class="dashboard-item">
             <div class="icon-container">
                 <img src="/images/2.jpg" alt="Bee Smart" class="dashboard-icon">
             </div>
             <h3>Hives</h3>
             <p>See Hive details and Add new hives</p>
+            </a>
         </div>
         <div class="dashboard-item">
             <div class="icon-container">
