--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(241, 198, 105, 0.979);
     padding: 10px 0;
     display: flex;
     align-items: center;
@@ -63,13 +63,16 @@
 .login-form, .register-form {
     background-color: #f3eded;
     padding: 50px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px; 
     text-align: center;
     width: 350px;
     padding-bottom: 20px;
-    margin-top: 70px;
+    margin-top: 20px;
 }
+.register-form{
+    margin-top: 60px;
+}
+
 
 .logo img {
     width: 100px;
@@ -143,7 +146,7 @@ button:hover {
     border: 1px solid #f5c6cb;
     border-radius: 4px;
 }
-.login-button , .submit-button{
+.login-button , .submit-button , .logIn-button{
     background: linear-gradient(to right, #ffa500, #ff4500);
     border: none;
     color: white;
