--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,6 @@
         <ul>
             <li><a href="#home">Home</a></li> <!-- #home will scroll to the home section -->
             <li><a href="#dashboard">Dashboard</a></li> <!-- #dashboard will scroll to the dashboard section -->
-            <li><a href="#maintenance">Maintenance</a></li> <!-- Assuming there’s a maintenance section -->
             <li><a href="#contact">Contact</a></li> 
         </ul>
     </div>
@@ -51,21 +50,22 @@
 <div class="dashboard-section">
     <div class="dashboard-container">
         <div class="dashboard-item">
-            <a href="/location-search" class="dashboard-item">
-            <div class="icon-container">
-                <img src="/images/1.jpg" alt="Bee Smart" class="dashboard-icon">
-            </div>
-            <h3>Location</h3>
-            <p>Search Location For hives</p>
-            </a>
-        </div>
-        <div class="dashboard-item">
             <a href="/hive-details" class="dashboard-item">
             <div class="icon-container">
                 <img src="/images/2.jpg" alt="Bee Smart" class="dashboard-icon">
             </div>
             <h3>Hives</h3>
             <p>See Hive details and Add new hives</p>
+            </a>
+        </div>
+
+        <div class="dashboard-item">
+            <a href="/maintanace" class="dashboard-item">
+            <div class="icon-container">
+                <img src="/images/1.jpg" alt="Bee Smart" class="dashboard-icon">
+            </div>
+            <h3>Maintanance</h3>
+            <p>Search Location For hives</p>
             </a>
         </div>
         <div class="dashboard-item">
@@ -85,6 +85,28 @@
     </div>
 </div>
 <script src="/animation.js"> </script>
+</section>
+
+<section class="contact-section" id="contact">
+    <h2>Contact</h2>
+    <div class="contact-details">
+        <div class="contact-item">
+            <h3>Opening Hours</h3>
+            <p>Monday to Sunday<br>10:00AM - 10:00PM</p>
+        </div>
+        <div class="contact-item">
+            <h3>Address</h3>
+            <p>175, New Kalmunai Road,<br>Kallady,<br>Batticaloa</p>
+        </div>
+        <div class="contact-item">
+            <h3>Phone</h3>
+            <p>067-2228692</p>
+        </div>
+        <div class="contact-item">
+            <h3>Email</h3>
+            <p>info@beesmart.lk</p>
+        </div>
+    </div>	
 </section>
 
 
