changes in maintenance page

--- a/views/index.html
+++ b/views/index.html
@@ -28,6 +28,10 @@
             <li><a href="#dashboard">Dashboard</a></li> <!-- #dashboard will scroll to the dashboard section -->
             <li><a href="#contact">Contact</a></li> 
         </ul>
+        <a href="/logout" class="logout-icon">
+            <img src="/images/logout.png" alt="Logout" style="width: 30px; height: 30px; margin-right: 20px;">
+            <span class="logout-text">Log Out</span>
+        </a>
     </div>
 
     <section class="home-section" id="home">
