--- a/public/style.css
+++ b/public/style.css
@@ -32,11 +32,11 @@
     margin: 0;
     padding: 0;
     display: flex;
-    align-items: center;
+    margin-left: 650px;
 }
 
 .navbar li {
-    margin: 0 25px;
+    margin: 0 35px;
 }
 
 .navbar a {
@@ -50,6 +50,42 @@
 .navbar a:hover {
     color: #FFA500;
 }
+.logout-icon {
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin-right: 30px;
+    text-decoration: none;
+}
+
+.logout-icon img {
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.logout-icon:hover img {
+    transform: scale(1.1); /* Slight zoom-in on hover */
+}
+
+.logout-text {
+    position: absolute;
+    top: 50px; /* Adjust depending on the icon size */
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.8); /* Dark background for the tooltip */
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    opacity: 0;
+    transition: opacity 0.3s;
+    font-size: 12px;
+    white-space: nowrap;
+}
+
+.logout-icon:hover .logout-text {
+    opacity: 1; /* Show tooltip on hover */
+}
+
 
 .contact-section {
     background-color: #000;
