make some changes on pages

--- a/views/index.html
+++ b/views/index.html
@@ -82,11 +82,13 @@
             </a>
         </div>
         <div class="dashboard-item">
+            <a href="/hive-report" class="dashboard-item">
             <div class="icon-container">
                 <img src="/images/4.jpg" alt="Bee Smart" class="dashboard-icon">
             </div>
             <h3>Report</h3>
             <p>View statistic and graph reports</p>
+            </a>
         </div>
     </div>
 </div>
