--- a/views/index.html
+++ b/views/index.html
@@ -96,7 +96,7 @@
 </section>
 
 <section class="contact-section" id="contact">
-    <h2>Contact</h2>
+    <h2>Contact Us</h2>
     <div class="contact-details">
         <div class="contact-item">
             <h3>Opening Hours</h3>
