--- a/public/style.css
+++ b/public/style.css
@@ -88,8 +88,8 @@
 
 
 .contact-section {
-    background-color: #000;
-    color: #fff;
+    background: linear-gradient(to bottom, #f0f5da, #f1b965);
+    color: #f0670c;
     padding: 50px 20px;
     text-align: center;
 }
@@ -97,7 +97,7 @@
 .contact-section h2 {
     font-size: 2em;
     margin-bottom: 20px;
-    color: #f1ebeb;
+    color: #030303;
 }
 
 .contact-details {
@@ -124,6 +124,7 @@
     font-size: 1em;
     margin: 0;
     line-height: 1.6;
+    color: #000;
 }
 .contact-item:not(:last-child)::after {
     content: '';
@@ -133,13 +134,20 @@
     transform: translateY(-50%);
     width: 1px;
     height: 60%;
-    background-color: #fff;
+    background-color: #080808;
 }
 
 @media (max-width: 768px) {
     .contact-item:not(:last-child)::after {
         display: none;
     }
+}
+
+.background{
+    background-image: url('/images/back2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .container {
@@ -184,7 +192,7 @@ h1 .highlight {
 }
 
 p, a {
-    color: #f1ebeb;
+    color: #ececec;
     font-size: 14px;
 }
 
