--- a/views/login.html
+++ b/views/login.html
@@ -4,9 +4,121 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Bee Smart</title>
-    <link rel="stylesheet" href="/style.css">
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-image: url('/images/pic2.jpg');
+            background-size: cover;
+            height: 550px;
+            margin: 0;
+            padding: 0;
+        }
+       
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+            text-align: center;
+        }
+
+        .login-form{
+           padding: 50px;
+           text-align: center;
+           width: 350px;
+           padding-bottom: 20px;
+           margin-top: 20px;
+           background-color: rgba(255, 255, 255, 0.5);
+           background-blend-mode: overlay;
+        }
+
+        .logo img {
+          width: 100px;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+h1, h2 {
+    margin: 10px 0;
+    font-weight: bold;
+    font-size: 28px;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+p, a {
+    color: #ececec;
+    font-size: 14px;
+}
+
+input {
+    width: 100%;
+    padding: 12px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 12px;
+    color: #747373;
+}
+
+.forgot-password {
+    text-align: right;
+    margin: 10px 0;
+    
+}
+
+.forgot-password a {
+    color: #f28c28;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.forgot-password a:hover {
+    text-decoration: underline;
+}
+
+.alert {
+    background-color: #0f0f0f;
+    color: #030303;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #f5c6cb;
+    border-radius: 4px;
+}
+.login-button  , .logIn-button{
+    background: linear-gradient(to right, #ffa500, #ff4500);
+    border: none;
+    color: white;
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 15px;
+    margin: 15px 0;
+    cursor: pointer;
+    border-radius: 25px;
+    width: 70%;
+    font-weight: bold;
+}
+.create-account {
+    font-size: 14px;
+    color: #666;
+    margin-top: 10px;
+}
+
+.create-account a {
+    color: #ff4500;
+    text-decoration: none;
+}
+
+.create-account a:hover {
+    text-decoration: underline;
+} 
+    </style>
 </head>
 <body>
+    <div class="background">
     <div class="container">
         <div class="login-form">
             <div class="logo">
@@ -30,6 +142,7 @@
             <p class="create-account">If you don't have an account, <a href="/register">Create an Account</a></p>
         </div>
     </div>
+</div>
 </body>
 </html>
 
