--- a/views/register.html
+++ b/views/register.html
@@ -4,7 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Bee Smart</title>
-    <link rel="stylesheet" href="/style.css">
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-image: url('/images/pic2.jpg');
+            background-size: cover;
+            height: 550px;
+            margin: 0;
+            padding: 0;
+    }
+       
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+}
+
+.register-form {
+    background-color: #f3eded;
+    padding: 50px;
+    text-align: center;
+    width: 350px;
+    padding-bottom: 20px;
+    margin-top: 20px;
+    background-color: rgba(255, 255, 255, 0.4);
+    background-blend-mode: overlay;
+}
+.register-form{
+    margin-top: 60px;
+}
+
+
+.logo img {
+    width: 100px;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+h1, h2 {
+    margin: 10px 0;
+    font-weight: bold;
+    font-size: 28px;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+ 
+
+p, a {
+    color: #ececec;
+    font-size: 14px;
+}
+
+button {
+    background-color: #FFD700;
+    border: none;
+    padding: 10px 20px;
+    color: #111;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+input {
+    width: 100%;
+    padding: 12px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 12px;
+    color: #747373;
+}
+
+
+
+.alert {
+    background-color: #0f0f0f;
+    color: #030303;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #f5c6cb;
+    border-radius: 4px;
+}
+.submit-button {
+    background: linear-gradient(to right, #ffa500, #ff4500);
+    border: none;
+    color: white;
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 15px;
+    margin: 15px 0;
+    cursor: pointer;
+    border-radius: 25px;
+    width: 70%;
+}
+
+
+    </style>
 </head>
 <body>
     <div class="container">
