make some style changes

--- a/views/view-history.html
+++ b/views/view-history.html
@@ -38,7 +38,7 @@
         }
 
         th {
-            background-color: #f09d05;
+            background-color: #f1a20e;
             color: white;
         }
     </style>
